k3s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: stayontrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: buscoveanuvictor/stayontrack_api:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: stayontrack
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: 5000
