k3s/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: stayontrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: buscoveanuvictor/stayontrack_web:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: stayontrack
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
